refactor: OrderStatus enum 사용하도록 변경